# clipwright

./: .gitignore  README.md  clipwright.sh  pyproject.toml
.github/workflows/: release.yml
assets/: clipwright.desktop
docs/: release.md
docs/release-notes/: v1.0.0.md
scripts/: build-appimage.sh
src/clipwright/: __init__.py  __main__.py  app.py
src/clipwright/core/: converter.py  ffmpeg.py  mediafile.py  merger.py  outputs.py  presets.py  renamer.py  scanner.py  transcoder.py
src/clipwright/ui/: file_dialogs.py  filepanel.py  jobpanel.py  mainwindow.py  previewpanel.py
src/clipwright/ui/dialogs/: convert_dialog.py  help_dialog.py  rename_dialog.py  settings_dialog.py  transcode_dialog.py  trim_dialog.py
src/clipwright/ui/widgets/: progresscard.py  thumbnail.py
src/clipwright/util/: config.py  paths.py
tests/: test_ffmpeg.py  test_outputs.py  test_scanner.py  test_transcoder.py
