[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clipwright"
version = "0.1.2"
description = "Desktop tool to prepare camera and video files for Linux editing workflows"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
clipwright = "clipwright.app:main"

[project.gui-scripts]
clipwright = "clipwright.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clipwright"]

[tool.ruff]
line-length = 100
